subnet_nsg_deploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "remoteAllowedCIDR": {
        "type": "string",
        "minLength": 7,
        "defaultValue": "0.0.0.0/0",
        "metadata": {
          "description": "Enter Public IP CIDR to allow for accessing the deployment.Enter in 0.0.0.0/0 format, you can always modify these later in NSG Settings"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      }
    },
    "variables": {
      "virtualNetworkName": "azure-vnet",
      "frontTierSubnetName": "front-tier-subnet",
      "backTierSubnetName": "back-tier-subnet",
      "frontNSGName": "front-tier-nsg",
      "backNSGName": "back-tier-nsg"
    },
    "resources": [
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('frontNSGName')]",
        "apiVersion": "2016-03-30",
        "location": "[parameters('location')]",
        "comments": "NSG for front Subnet. Rules for allowing HTTP and HTTPS requests from internet are created",
        "tags": {
          "displayName": "front NSG"
        },
        "properties": {
          "securityRules": [
            {
              "name": "HTTP-allow",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "[parameters('remoteAllowedCIDR')]",
                "destinationAddressPrefix": "10.0.1.0/24",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound"
              }
            },
            {
              "name": "HTTPS-allow",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "[parameters('remoteAllowedCIDR')]",
                "destinationAddressPrefix": "10.0.1.0/24",
                "access": "Allow",
                "priority": 120,
                "direction": "Inbound"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('backNSGName')]",
        "apiVersion": "2016-03-30",
        "location": "[parameters('location')]",
        "comments": "NSG for back Subnet. By default, intra Vnet traffic is allowed and requests from internet are denied",
        "tags": {
          "displayName": "back NSG"
        },
        "properties": {
          "securityRules": []
        }
      },
      {
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "apiVersion": "2016-03-30",
        "location": "[parameters('location')]",
        "comments": "Virtual network for overall solution",
        "tags": {
          "displayName": "Virtual Network"
        },
        "dependsOn": [
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('frontNSGName'))]",
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('backNSGName'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "subnets": [
            {
              "name": "[variables('frontTierSubnetName')]",
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontNSGName'))]"
                }
              }
            },
            {
              "name": "[variables('backTierSubnetName')]",
              "properties": {
                "addressPrefix": "10.0.2.0/24",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('backNSGName'))]"
                }
              }
            }
          ]
        }
    }
      ]
  }
